--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Welcome to the Spell Checker Tool!</h1>
     <h2>Please login using an existing account or register as a new user to use the application.</h2>
-    <p><a href="/login">Login</a></p>
-    <p><a href="/register">Register</a></p>
+    <p><a href='{{ url_for('login') }}'>Login</a></p>
+    <p><a href='{{ url_for('register') }}'>Register</a></p>
 </body>
 </html>
