--- a/templates/login_failure.html
+++ b/templates/login_failure.html
@@ -7,6 +7,6 @@
     <h2 id="result">Incorrect</h2>
     <h3>Incorrect username or password.</h3>
     <h3>Try again.</h3>
-    <p><a href="/login">Login</a></p>
+    <p><a href='{{ url_for('login') }}'>Login</a></p>
 </body>
 </html>
