--- a/templates/login_success.html
+++ b/templates/login_success.html
@@ -7,6 +7,6 @@
     <h2 id="result">Success</h2>
     <h3>Login successful.</h3>
     <h3>You may now use the spell checker tool.</h3>
-    <p><a href="/spell_check">Spell Checker</a></p>
+    <p><a href='{{ url_for('spell_check') }}'>Spell Checker</a></p>
 </body>
 <html>
