--- a/templates/register.html
+++ b/templates/register.html
@@ -17,6 +17,6 @@
 </form>
 <p/>
 <h2>Already registered?</h2>
-<p><a href="/login">Login</a></p>
+<p><a href='{{ url_for('login') }}'>Login</a></p>
 </body>
 </html>
