--- a/templates/registration_complete.html
+++ b/templates/registration_complete.html
@@ -7,9 +7,7 @@
 <body>
     <h1 id="success">Success</h1>
     <h1>You're registered!</h1>
-    <h2>Login to continue.</h2>
-    <p><a href="/login">Login</a></p>
-    <h2>Register another user.</h2>
-    <p><a href="/register">Register</a></p>
+    <p><a href='{{ url_for('login') }}'>Login to continue.</a></p>
+    <p><a href='{{ url_for('register') }}'>Register another user.</a></p>
 </body>
 </html>
