--- a/templates/spell_check.html
+++ b/templates/spell_check.html
@@ -14,7 +14,7 @@
         <br><br>
       <input type="submit" value="Submit">
     </form>
-    <p><a href="/logout">Logout</a></p>
+    <p><a href='{{ url_for('logout') }}'>Logout</a></p>
     <p/>
 </body>
 </html>
