--- a/templates/tfa_failure.html
+++ b/templates/tfa_failure.html
@@ -6,6 +6,6 @@
     <h1></h1>
     <h2 id="result">Two-factor authentication failure</h2>
     <h3>Try again.</h3>
-    <p><a href="/login">Login</a></p>
+    <p><a href='{{ url_for('login') }}'>Login</a></p>
 </body>
 </html>
