--- a/templates/username_already_exists.html
+++ b/templates/username_already_exists.html
@@ -6,6 +6,6 @@
     <h1 id="success">Failure</h1>
     <h2>User with username {{username}} already exists.</h2>
     <h2>Try again.</h2>
-    <p><a href="/register">Register</a></p>
+    <p><a href='{{ url_for('register') }}'>Register</a></p>
 </body>
 </html>
