--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,7 @@
       Username: <INPUT SIZE=32 id="uname" name="uname" TYPE='text'/><p/>
       Password: <INPUT SIZE=32 id="pword" name="pword" TYPE='password'/><p/>
       Two-factor Authentication Code: <INPUT SIZE=32 id="2fa" name="2fa" TYPE='text'/><p/>
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
       <button id="loginbutton" type="submit">Login</button>
     </form>
     <p/>
