--- a/templates/spell_check.html
+++ b/templates/spell_check.html
@@ -12,6 +12,7 @@
     <form name="input" id="input" action="/spell_check" method="POST">
         <textarea id="inputtext" name="inputtext" rows="4" cols="50"></textarea>
         <br><br>
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
       <input type="submit" value="Submit">
     </form>
     <p><a href='{{ url_for('logout') }}'>Logout</a></p>
